# id-generator

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  install.sh  main.go
config/: binding.yaml
core/UidGenerator/: CMakeLists.txt  test.c  words_node.sql
core/UidGenerator/include/: RingBuffer.h
core/UidGenerator/src/: RingBuffer.c
core/snow/: CMakeLists.txt
core/snow/include/: snow.h
core/snow/src/: snow.c
core/snow/test/: snow.test.cpp
orm/: GeneratorWorksNode.go  Instance.go  WordsNode.go  words_node.sql
test/: snow.test.cpp
uidGenerator/: BitsAllocator.go  BufferPaddingExecutor.go  CachedUidGenerator.go  DefaultUidGenerator.go  ScheduledExecutorService.go  Task.go  utility.go
